css/main.css
body, html{
    height: 100%;
    font-family: 'Lato', 'Noto Sans', 'Helvetica', 'Corbel', sans-serif;
}

/* Edit Bootstrap elements Start */
.navbar-default {
    transition: all .5s;
    background-color: transparent;
    border: none;
    padding: 8px;
    position: absolute;
}

.navbar-default .navbar-nav>li>a, .navbar-default .navbar-brand {
    color: #fff;
}
.navbar-scrolled .navbar-brand  {
    color: #00CCCC;
}
.navbar-scrolled .navbar-nav>li>a{
    color: #525c65;
}

.navbar-default .navbar-brand:focus, .navbar-default .navbar-brand:hover {
    color: #009999;
}
.navbar-default .navbar-nav>li>a:focus, .navbar-default .navbar-nav>li>a:hover {
    color: #eaeaea;
}
.navbar-scrolled .navbar-nav>li>a:focus, .navbar-scrolled .navbar-nav>li>a:hover {
    color: #21242c;
}

.navbar-default .navbar-nav>.open>a, .navbar-default .navbar-nav>.open>a:focus,
.navbar-default .navbar-nav>.open>a:hover {
    color: #21242c;
    background-color: #fccc3a;
    font-weight: normal;
}
.navbar-default .navbar-toggle .icon-bar {
    background-color: #fff;   
}

.navbar-default .navbar-toggle:focus, .navbar-default .navbar-toggle:hover {
    background-color: #FF5E3E;
}
.navbar-default .navbar-toggle {
    border-color: #fff;
}

.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
    border-color: #FF5E3E;
}


.navbar-scrolled {
    position: fixed;
    transition: all .5s;
    background-color: #fff;
    padding: 3px 0px;
    box-shadow: 0px 1px 20px 0px rgba(46, 61, 73, 0.2);
}


/* Edit Bootstrap elements End */






/* Cover page start */

section.home-cover {
    background-image: url(../img/cover.jpg);
    background-size: cover;
    height: 100%;
    color: #fff;
    background-position: bottom center;
}
section.home-cover .overlay {
    background: rgba(44, 129, 130, .6);
}
section.home-cover .cover-description {
    position: absolute;
    top: 20%;
    padding: 20px 30px;
    margin-left: 3%;

}
section.home-cover .cover-description h1 {
    color: #FF5E3E;
}

section.home-cover .cover-description p {
    color: #eaeaea;
    width: 60%;
}
/* Cover page end */

/* Documents section Start */
section.documents {
    background-color: #fafbfc;
    border: 1px solid #efefef;
}

section .section-body {
    margin-bottom: 60px;

}


section .section-title {
    margin-bottom: 50px;
    margin-top: 30px;
}


section .section-title h2 {
    color: #393b41;
    text-transform: uppercase;
    letter-spacing: .1em;
}


section.documents .section-body .row {
    margin: 0px;
}

section.documents .section-body .row .documents-details {
    padding: 10px 5px 35px;
}

section.documents .section-body .row .documents-details .header h3 {
    font-size: 40px;
    color: #21242c;
    font-family: 'Source Serif Pro', 'Noto Serif', serif;
}

section.documents .section-body .row .documents-details .body p {
    font-size: 18px;
    line-height: 30px;
    margin: 26px 0 42px 0;
    color: #21242c;
}

section.documents .section-body .row .documents-details .footer select{
    background-color: #00CCCC;
    width: 70%;
    border: 1px solid #009999;
    font-size: 20px;
    font-weight: bold;
    color: #ffffff;
    padding: 10px;
}

section.documents .section-body .row .documents-details .footer select option{
    background-color: #ffffff;
    color: #21242c;    
}

section.documents .documents-table{
    padding: 20px 10px;
    background-color: #ffffff;
    box-shadow: 5px 5px 25px 0px rgba(46, 61, 73, 0.2);
    border-radius: 8px;
    min-height: 400px;
}

section.documents .documents-table .header{
    margin-bottom: 30px;
}
section.documents .documents-table .header .row {
    width: 80%;
    margin: auto;
    border: 1px solid #D6D8DA;
    border-radius: 5px;
    overflow: hidden;
}

section.documents .documents-table .header .row > div{
    padding: 0%;
}

section.documents .documents-table .header .row button {
    width: 100%;
    background: transparent;
    padding: 10px 8px;
    border: none;    
}

section.documents .documents-table .header .row button:hover {
    color: #fff;
    background-color: #ff7154;
}
section.documents .documents-table .header .row button.selected {
    color: #fff;
    background-color: #FF5E3E;
}

section.documents .documents-table table {
    border-radius: 5px;
    overflow: hidden;
}

section.documents .documents-table table thead {
    background: #FCCC3A;
    box-shadow: 5px 5px 25px 0px rgba(46, 61, 73, 0.1);
}

section.documents .documents-table table tbody {
    text-align: left;
}

section.documents .documents-table table tbody tr:hover {
    cursor: pointer;
}
section.documents .extrenal-resources {
    background-image: url(../img/extrenal-resources.jpg);
    background-size: cover;
    height: 420px;
    background-position: center center;
    background-repeat: no-repeat;
    margin: 90px auto;
    position: relative;
    color: #fff;
}
section.documents .extrenal-resources .overlay {
    background: rgba(0, 0, 0, 0.65);
}

section.documents .extrenal-resources .extrenal-resources-description {
    position: relative;
    width: 60%;
    margin: auto;
    padding: 100px 0;
}
section.documents .extrenal-resources .extrenal-resources-description p {
    margin-bottom: 40px;
    margin-top: 20px;
}

section.documents .extrenal-resources .extrenal-resources-description a {
    border: 1px solid #00CCCC;
    text-decoration: none;
    background: #00CCCC;
    color: #ffffff;
    padding: 12px 30px;
    box-shadow: 8px 10px 20px 0px rgba(46, 61, 73, 0.24);
    border-radius: 5px;
    font-size: 16px;
    letter-spacing: .1em;
}

section.documents .extrenal-resources .extrenal-resources-description a:hover {
    opacity: .9;
}
/* Documents section end */

/* Why Tresor section start */

section.why-tresor .section-body h3 {
    font-size: 30px;
    color: #21242c;
    font-family: 'Source Serif Pro', 'Noto Serif', serif;
}

section.why-tresor .section-body p {
    color: #566973;
    font-size: 18px;
}

/* Why Tresor section End */


/* Responsive design start */

@media (max-width: 768px) {
    section.home-cover .cover-description p {
        width: 98%;
    }
    section.home-cover .cover-description {
        top: 35%;
    }
    .navbar-nav .open .dropdown-menu {
    
        background-color: #fff;
    }
    .navbar-default .navbar-collapse {
        background: #fff;
    }
    .navbar-default .navbar-nav>li>a {
        color: #000000;
    }
        
}


@media (min-width: 768px) {
    section.documents .section-body .container-documents {
        min-height: 292px;
    }

    section.documents .documents-table table tbody tr td:first-of-type {
        min-width: 190px;
    }
}

@media (min-width: 1200px) {

    section.documents .section-body .row .documents-details {
        padding: 35px 5px;
        text-align: left;
    }
}
/* Responsive design end */


/* Framework start */
.true-sign {
    color: #018131;
}
.false-sign {
    color: #F52012;
}
.overlay {
    position: absolute;
    width: 100%;
    height: 100%
}
button:focus, select:focus,
button:active, select:active{
    outline: none;
}

/* Framework end */

